<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.ti.novocasual.Cadastro"

    android:id="@+id/content_cadastro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <ImageView
            android:layout_width="@dimen/logo_w_h"
            android:layout_height="@dimen/logo_w_h"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:src="@drawable/logocasual" />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/ID_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white" />

        </android.support.design.widget.TextInputLayout>
        <TextView
            android:text="País"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/IDtextView1" />

        <Spinner
            android:id="@+id/IDspinnerPais"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:entries="@array/listaDePaises"
            android:layout_alignParentStart="true"
            tools:ignore="UnknownId"
            android:theme="@style/AppTheme"/>
        <View
            android:id="@+id/vw_divider_1"
            android:layout_marginTop="20dp"
            android:background="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="0.8dp"/>
        <TextView
            android:text="Estado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/IDtextView2" />
        <Spinner
            android:id="@+id/IDspinnerEstados"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_below="@+id/IDspinnerPais"
            android:layout_alignParentStart="true"
             />

        <View
            android:id="@+id/vw_divider_2"
            android:layout_marginTop="20dp"
            android:background="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="0.8dp"/>
        <TextView
            android:text="Gênero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/IDtextView3" />
        <Spinner
            android:id="@+id/IDspinnerGenero"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:entries="@array/listaDeGeneros"
            android:layout_below="@+id/IDspinnerEstados"
            android:layout_alignParentStart="true"
             />
        <View
            android:id="@+id/vw_divider_3"
            android:layout_marginTop="20dp"
            android:background="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="0.8dp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/ID_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/ID_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:hint="@string/hint_senha"
                android:imeActionId="@+id/login"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/sign_up_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorAccent"
            android:text="@string/botao_registrar"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:text="@string/botao_esquecer_senha"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent" />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:text="@string/botao_link_para_login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15dp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />



</RelativeLayout>
